logout click issou on small screeen size fixed and console log deleted

--- a/src/components/selectCrypto/cryptoAutoComplete/CryptoAutoComplete.scss
+++ b/src/components/selectCrypto/cryptoAutoComplete/CryptoAutoComplete.scss
@@ -1,6 +1,6 @@
 .CryptoAutoComplete {
   position: relative;
-  z-index: 10;
+  z-index: -100;
   max-width: 60rem;
   padding: 1rem;
 
